tests/ui/parser/pat-recover-wildcards.stderr
error: expected one of `=>`, `if`, or `|`, found `+`
  --> $DIR/pat-recover-wildcards.rs:5:11
   |
LL |         _ + 1 => ()
   |           ^ expected one of `=>`, `if`, or `|`

error: expected one of `)`, `,`, or `|`, found `%`
  --> $DIR/pat-recover-wildcards.rs:11:12
   |
LL |         (_ % 4) => ()
   |            ^ expected one of `)`, `,`, or `|`

error: expected one of `=>`, `if`, or `|`, found `.`
  --> $DIR/pat-recover-wildcards.rs:17:10
   |
LL |         _.x() => ()
   |          ^ expected one of `=>`, `if`, or `|`

error: expected one of `=>`, `if`, or `|`, found `..=`
  --> $DIR/pat-recover-wildcards.rs:23:10
   |
LL |         _..=4 => ()
   |          ^^^ expected one of `=>`, `if`, or `|`

error: expected one of `=>`, `if`, or `|`, found reserved identifier `_`
  --> $DIR/pat-recover-wildcards.rs:29:11
   |
LL |         .._ => ()
   |           ^ expected one of `=>`, `if`, or `|`

error[E0586]: inclusive range with no end
  --> $DIR/pat-recover-wildcards.rs:35:10
   |
LL |         0..._ => ()
   |          ^^^ help: use `..` instead
   |
   = note: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)

error: expected one of `=>`, `if`, or `|`, found reserved identifier `_`
  --> $DIR/pat-recover-wildcards.rs:35:13
   |
LL |         0..._ => ()
   |             ^ expected one of `=>`, `if`, or `|`

error: expected one of `)`, `,`, or `|`, found `*`
  --> $DIR/pat-recover-wildcards.rs:43:12
   |
LL |         (_ * 0)..5 => ()
   |            ^ expected one of `)`, `,`, or `|`

error: expected one of `=>`, `if`, or `|`, found `(`
  --> $DIR/pat-recover-wildcards.rs:49:11
   |
LL |         ..(_) => ()
   |           ^ expected one of `=>`, `if`, or `|`

error: expected a pattern range bound, found an expression
  --> $DIR/pat-recover-wildcards.rs:55:14
   |
LL |         4..=(2 + _) => ()
   |              ^^^^^ arbitrary expressions are not allowed in patterns

error: range pattern bounds cannot have parentheses
  --> $DIR/pat-recover-wildcards.rs:55:13
   |
LL |         4..=(2 + _) => ()
   |             ^     ^
   |
help: remove these parentheses
   |
LL -         4..=(2 + _) => ()
LL +         4..=2 + _ => ()
   |

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0586`.
